--- a/booking/pom.xml
+++ b/booking/pom.xml
@@ -31,6 +31,7 @@
             <groupId>org.dbunit</groupId>
             <artifactId>dbunit</artifactId>
             <version>2.4.9</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.github.springtestdbunit</groupId>
@@ -124,6 +125,7 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.6.4</version>
         </dependency>
+
         <!--for hibernate-->
         <dependency>
             <groupId>javassist</groupId>
