--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -11,4 +11,18 @@
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 
+    <!--Error pages-->
+    <error-page>
+        <error-code>400</error-code>
+        <location>/jsp/error/400.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/jsp/error/404.jsp</location>
+    </error-page>
+    <error-page>
+        <exception-type>java.lang.Exception</exception-type>
+        <location>/jsp/error/error.jsp</location>
+    </error-page>
+
 </web-app>
